<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:padding="2dp">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:divider="@drawable/radio_button_divider"
        android:showDividers="middle"
        android:background="@drawable/dialog_border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:text="@string/textview_sort"
            android:id="@+id/textView"
            android:textSize="20dp"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:layout_margin="4dp"
            android:textStyle="bold" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_sortAZ"
            android:id="@+id/btnSortAZ"
            android:checked="false"
            android:layout_margin="4dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_sortZA"
            android:id="@+id/btnSortZA"
            android:layout_margin="4dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_sortNew"
            android:id="@+id/btnSortNew"
            android:checked="false"
            android:layout_margin="4dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_sortOld"
            android:id="@+id/btnSortOld"
            android:checked="false"
            android:layout_margin="4dp" />

    </RadioGroup>
</RelativeLayout>