<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:padding="6dp">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:showDividers="middle"
        android:divider="@drawable/radio_button_divider"
        android:background="@drawable/dialog_border">

        <TextView
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:text="@string/textview_closeWarning"
            android:id="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorBlack"
            android:textSize="22dp"
            android:gravity="center"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp">

            <ImageButton
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/button_cancel"
                android:id="@+id/btnCloseCancel"
                android:background="@drawable/background"
                android:textColor="@color/colorWhite"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/btn_cancel"
                android:scaleType="fitCenter"
                android:layout_margin="4dp" />

            <ImageButton
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/button_exit"
                android:id="@+id/btnCloseExit"
                android:background="@drawable/background"
                android:textColor="@color/colorWhite"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/btn_accept"
                android:scaleType="fitCenter"
                android:layout_margin="4dp" />
        </RelativeLayout>
    </RadioGroup>
</RelativeLayout>