<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        android:padding="2dp"
        android:gravity="center" >

    <RadioGroup
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:divider="@drawable/radio_button_divider"
            android:showDividers="middle"
            android:background="@drawable/dialog_border" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:text="@string/textview_settings"
                android:id="@+id/txtSettings"
                android:textSize="20dp"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                android:layout_margin="4dp"
                android:textStyle="bold" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_titleSize"
                    android:id="@+id/txtTitleSize"
                    android:layout_margin="4dp"
                    android:textSize="18dp"
                    android:textColor="@color/colorBlack" />

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekTitle"
                    android:indeterminateOnly="false"
                    android:indeterminate="false"
                    android:layout_margin="4dp" />
            </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_textSize"
                android:id="@+id/txtTextSize"
                android:layout_margin="4dp"
                android:textSize="18dp"
                android:textColor="@color/colorBlack" />

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seekText"
                android:indeterminateOnly="false"
                android:indeterminate="false"
                android:layout_margin="4dp" />
        </LinearLayout>

    </RadioGroup>
    </RelativeLayout>