<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:background="@color/colorWhite">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtSearch"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/dialog_border"
        android:textColor="@color/colorBlack"
        android:hint="@string/textview_search"
        android:textStyle="bold"
        android:textSize="18dp"
        android:padding="4dp"
        android:layout_margin="4dp"
        android:singleLine="true"
        android:minWidth="200dp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtSearch"
        android:padding="4dp"
        android:layout_marginTop="4dp"
        android:layout_above="@+id/layoutButtons"
        android:layout_marginBottom="4dp">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/relativeLayout"
            android:gravity="center_horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/linearLayout"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layoutButtons"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/button_sort"
            android:id="@+id/btnInfo"
            android:background="@drawable/background"
            android:textColor="@color/colorWhite"
            android:src="@drawable/btn_info"
            android:scaleType="fitCenter"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="0dp" />

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/button_sort"
            android:id="@+id/btnSearch"
            android:background="@drawable/background"
            android:textColor="@color/colorWhite"
            android:src="@drawable/btn_search"
            android:scaleType="fitCenter"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/button_sort"
            android:id="@+id/btnSort"
            android:background="@drawable/background"
            android:textColor="@color/colorWhite"
            android:src="@drawable/btn_notes_sort"
            android:scaleType="fitCenter"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/button_add"
            android:id="@+id/btnAdd"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/background"
            android:textColor="@color/colorWhite"
            android:src="@drawable/btn_notes_add"
            android:scaleType="fitCenter" />

    </LinearLayout>
</RelativeLayout>
